objects/Q9__ElementsObjectSummary__c.object
<CustomObject>
    <description>It&apos;s object for temporary records. Strongly recommend - DO NOT use this object for Your own purposes.</description>
    <fields>
        <fullName>Q9__ErrorLog__c</fullName>
        <label>Error Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9__LastCreatedDateLog__c</fullName>
        <label>Last Created Date Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9__LastModifiedDateLog__c</fullName>
        <description>Last modified date on ObjectName__c related Object</description>
        <label>Last Modified Date Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q9__ObjectName__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Q9__RecordCountLog__c</fullName>
        <label>Record Count Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Elements Object Summary</label>
    <nameField>
        <displayFormat>EOS-{0000000}</displayFormat>
        <label>Elements Object Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Elements Object Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>